--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                         <h2><a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/Tableau-Project-Comparison-of-Region-Based-onSales__17230199571380/Dashboard1?publish=yes">Comparison of Region<br />
                                         Based on Sales</a></h2>
                                     </header>
-                                    <a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/Tableau-Project-Comparison-of-Region-Based-onSales__17230199571380/Dashboard1?publish=yes" class="image fit"><img src="images/1512237.jpg" alt=""  /></a>
+                                    <a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/Tableau-Project-Comparison-of-Region-Based-onSales__17230199571380/Dashboard1?publish=yes" class="image fit"><img src="newdashboard.jpg" alt=""  /></a>
                                     <p> creating a dashboard to visualize the sales comparison between two selected regions and g a dashboard to understand the performance. </p>
                                     <ul class="actions special">
                                         <li><a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/Tableau-Project-Comparison-of-Region-Based-onSales__17230199571380/Dashboard1?publish=yes" class="button">View Project</a></li>
