--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <!-- Intro -->
                         <div id="intro">
                             <h1>DINESH T <br />
-                                PORTFOLIO</h1>
-                            <p>Data Analyst Skills in MSEXCEL, TABLEAU, MYSQL and PYTHON <a href="https://github.com/DineshThiravidamani">@DineshThiravidamani</a>
+                                Data Analyst</h1>
+                            <p>Data Analyst proficient in MS Excel, Tableau, MySQL, Power BI and Python <a href="https://github.com/DineshThiravidamani">@DineshThiravidamani</a>
                             <a href="https://html5up.net/license"></a>.</p>
                             <ul class="actions">
                                 <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -58,8 +58,8 @@
                                 <article class="post featured">
                                     <header class="major">
                                         <span class="date"></span>
-                                        <h2><a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/AmazonsalesTransactionReport/Dashboard1">Data Cleaning and Vizualization with<br />
-                                        MSEXCEL and TABLEAU</a></h2>
+                                        <h2><a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/AmazonsalesTransactionReport/Dashboard1">Data Analysis & Visualization<br />
+                                        </a></h2>
                                         <p>In These Project did the data cleaning with MSEXCEL and the Vizualization in TABLEAU</p>
                                     </header>
                                     <a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/AmazonsalesTransactionReport/Dashboard1" class="image main"><img src="images\c6d1ce14939c45d25833bfde1f7b444f.jpg" alt="" /></a>
@@ -114,7 +114,7 @@
                                         <header>
                                             <span class="date"></span>
                                             <h2><a href="https://github.com/DineshThiravidamani/MYSQL-Movie-Data-Analysis/blob/main/PROJECT%20QUERIES.sql">Movie Data Analysis<br />
-                                            by MYSQL</a></h2>
+                                            in MySQL</a></h2>
                                         </header>
                                         <a href="https://github.com/DineshThiravidamani/MYSQL-Movie-Data-Analysis/blob/main/PROJECT%20QUERIES.sqls" class="image fit"><img src="images/1512237.jpg" alt=""  /></a>
                                         <p>In these Project use the MYSQL server to Analysis the movie data using MYSQL server to make more usable for Analysis </p>
@@ -129,7 +129,7 @@
                                             Based on Sales</a></h2>
                                         </header>
                                         <a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/Tableau-Project-Comparison-of-Region-Based-onSales__17230199571380/Dashboard1?publish=yes" class="image fit"><img src="images\newdashboard (1).jpg" alt=""  /></a>
-                                        <p> Creating a dashboard to visualize the sales comparison between two selected regions and dashboard to understand the performance. </p>
+                                        <p> Creating a dashboard to visualize the sales comparison between two selected regions and dashboard to understand the performance.</p>
                                         <ul class="actions special">
                                             <li><a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/Tableau-Project-Comparison-of-Region-Based-onSales__17230199571380/Dashboard1?publish=yes" class="button">View Project</a></li>
                                         </ul>
@@ -146,6 +146,19 @@
                                             <li><a href="https://github.com/DineshThiravidamani/layoffs-MYSQL-Cleaning-and-EDA/blob/main/Data%20Cleaning%20(PROJECT).sql" class="button">View Project</a></li>
                                         </ul>
                                     </article>
+                                    <article>
+                                        <header>
+                                            <span class="date"></span>  
+                                            <h2><a href="https://github.com/DineshThiravidamani/Stocky">Stocky<br />
+                                            </a>ChatBot-Python</h2>
+                                        </header>
+                                        <a href="https://github.com/DineshThiravidamani/Stocky" class="image fit"><img src="images\xgy1w8r7.png" alt=""  /></a>
+                                        <p> Developed a Python-based chatbot that fetches real-time stock prices and details from NSE using the yfinance library. </p>
+                                        <ul class="actions special">
+                                            <li><a href="https://github.com/DineshThiravidamani/Stocky" class="button">View Project</a></li>
+                                        </ul>
+                                    </article>
+                                   
                                 </section>
 
                                 
@@ -176,12 +189,6 @@
                                 </section>
                             </section>
                         </footer>
-
-                    <!-- Copyright -->
-                        <div id="copyright">
-                            <ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-                        </div>
-
                 </div>
 
             <!-- Scripts -->
