--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                             <h2><a href="https://1drv.ms/x/s!An91OJJBejGGg3TiGjERW42gSgxI">Data Cleaning And Vizualization in MSEXCEL<br />
                                             </a></h2>
                                         </header>
-                                        <a href="https://1drv.ms/x/s!An91OJJBejGGg3TiGjERW42gSgxI" class="image fit"><img src="images\Lead-Conversion-1024x507.jpg" alt="" /></a>
+                                        <a href="https://1drv.ms/x/s!An91OJJBejGGg3TiGjERW42gSgxI" class="image fit"><img src="Lead-Conversion-1024x507.jpg" alt="" /></a>
                                         <p>Design a sales dashboard that analyzes the sales based on various 
                                             product categories. By using user control for product category so that users can 
                                             select the category accordingly</p>
@@ -152,7 +152,7 @@
                                             <h2><a href="https://github.com/DineshThiravidamani/Stocky">Stocky<br />
                                             </a>ChatBot-Python</h2>
                                         </header>
-                                        <a href="https://github.com/DineshThiravidamani/Stocky" class="image fit"><img src="images\xgy1w8r7.png" alt=""  /></a>
+                                        <a href="https://github.com/DineshThiravidamani/Stocky" class="image fit"><img src="xgy1w8r7.jpg" alt=""  /></a>
                                         <p> Developed a Python-based chatbot that fetches real-time stock prices and details from NSE using the yfinance library. </p>
                                         <ul class="actions special">
                                             <li><a href="https://github.com/DineshThiravidamani/Stocky" class="button">View Project</a></li>
@@ -164,7 +164,7 @@
                                             <h2><a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/PROJECT2Crimeanalysis/OverallCrimeStatisticsDashboard?publish=yes">Crime Analysis<br />
                                             </a>Tableau</h2>
                                         </header>
-                                        <a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/PROJECT2Crimeanalysis/OverallCrimeStatisticsDashboard?publish=yes" class="image fit"><img src="images\crime-scene-tape-multiple-1280x640.jpg" alt=""  /></a>
+                                        <a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/PROJECT2Crimeanalysis/OverallCrimeStatisticsDashboard?publish=yes" class="image fit"><img src="crime-scene-tape-multiple-1280x640.jpg" alt=""  /></a>
                                         <p> I developed a comprehensive set of interactive dashboards to analyze crime statistics across various dimensions, including time, location, and incident type. </p>
                                         <ul class="actions special">
                                             <li><a href="https://public.tableau.com/app/profile/dinesh.t8492/viz/PROJECT2Crimeanalysis/OverallCrimeStatisticsDashboard?publish=yes" class="button">View Project</a></li>
